Bug 135490 - Fraction line in formulas not always shown in presentation view (Skia)
Summary: Fraction line in formulas not always shown in presentation view (Skia)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: IA64 (Itanium) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-08-06 09:32 UTC by bellgardt
Modified: 2020-08-20 16:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Presentation with two slides showing the bug (44.53 KB, application/vnd.oasis.opendocument.presentation)
2020-08-06 10:04 UTC, bellgardt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bellgardt 2020-08-06 09:32:20 UTC
Description:
In some formulas with fractions the fraction lines disappears in presentation mode. Sometimes after copying the formula, the fraction line appears, but I didn't find a rule for that behavior.

Steps to Reproduce:
1. Open attached document
2. Start presentation

Actual Results:
Several fraction line in formulas are not shown

Expected Results:
All fraction lines should be shown


Reproducible: Sometimes


User Profile Reset: No



Additional Info:
I am not able to copy any information from the About LO dialog!!!
Is this another bug?

7.0.0.3 (x64)
Build 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU Threads 4; Win 6.1 Service Pack 1 Build 7601
UI-Render Skia/Raster; VCL: win

LO was installed with Separate Install Gui, without changes in the original user profile.

Bug is same with or without OpenCL enabled.
Comment 1 bellgardt 2020-08-06 10:04:18 UTC
Created attachment 163999 [details]
Presentation with two slides showing the bug

After opening the formulas in the formula editor, the fraction lines sometimes appear and sometimes disappear.
Comment 2 Telesto 2020-08-06 20:29:42 UTC
Repro
Version: 7.1.0.0.alpha0+ (x64)
Build ID: <buildversion>
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: ru-RU (nl_NL); UI: en-US
Calc: CL

For me only on sheet 2 in the green area
Comment 3 Commit Notification 2020-08-20 06:32:02 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6c703220ff3d7c3931ec324143342b03858c8eea

ensure that polygons that are just a line are drawn by Skia (tdf#135490)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2020-08-20 16:24:57 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/c746693ffc1a47f668fcbb8af6f0a8ef2f1648d8

ensure that polygons that are just a line are drawn by Skia (tdf#135490)

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.