ensure that polygons that are just a line are drawn by Skia (tdf#135490)

Skia doesn't fill polygons that are really just a line, because they
are considered empty (width or height are zero). But LO apparently
requires those to be drawn, so ensure so.

Change-Id: I94f090874c91472ad23993ef095550c7bdf7374a